syntax = "proto3";

package taskPackage;

service TaskService {
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
    rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
    rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
    rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
}
// Task message definition
message Task {
    string taskId = 1;
    string Title = 2;  
    string description = 3; 
    string Status = 4;
    string userId= 5 ;
    string createdAt = 6;
    string updatedAt = 7;
}

// req && res for  CRUD opertaion

//create task 
message CreateTaskRequest{
    string title = 1;
    string description = 2;
    string user_id = 3;
}
message CreateTaskResponse{
    Task task =1;
}
// get task 
message GetTaskRequest{
    string taskId=1;
}
message GetTaskResponse{
    Task task =1;
}
// update task 
message UpdateTaskRequest{
    string taskId=1;
    string title = 2;
    string description = 3;
    string status = 4;
}
message UpdateTaskResponse{
    Task task =1;
}
// delete task 
message DeleteTaskRequest{
    string taskId=1;
}
message DeleteTaskResponse{
    Task task =1;
    bool success = 2;
}
// list tasks
message ListTasksRequest{
    string userId=1;
}
message ListTasksResponse{
    repeated Task tasks =1;
    
}
